package integration

import (
	"context"
	"fmt"
	"sync"
	"time"
)

// IntegrationTestSuite provides end-to-end integration testing
type IntegrationTestSuite struct {
	scenarios       map[string]*TestScenario
	environments    map[string]*TestEnvironment
	dependencies    map[string]*ServiceDependency
	dataProviders   map[string]*TestDataProvider
	validators      map[string]*ResponseValidator
	config          *IntegrationConfig
	logger          TestLogger
	mutex           sync.RWMutex
}

// TestScenario represents an end-to-end test scenario
type TestScenario struct {
	ID              string                 `json:"id"`
	Name            string                 `json:"name"`
	Description     string                 `json:"description"`
	Steps           []*TestStep            `json:"steps"`
	Prerequisites   []*Prerequisite        `json:"prerequisites"`
	Environment     string                 `json:"environment"`
	Timeout         time.Duration          `json:"timeout"`
	RetryPolicy     *RetryPolicy           `json:"retry_policy"`
	CleanupPolicy   *CleanupPolicy         `json:"cleanup_policy"`
	Tags            []string               `json:"tags"`
	Priority        int                    `json:"priority"`
	Parallel        bool                   `json:"parallel"`
	Metadata        map[string]interface{} `json:"metadata"`
	CreatedAt       time.Time              `json:"created_at"`
	UpdatedAt       time.Time              `json:"updated_at"`
}

// TestStep represents a single step in a test scenario
type TestStep struct {
	ID              string                 `json:"id"`
	Name            string                 `json:"name"`
	Type            StepType               `json:"type"`
	Service         string                 `json:"service"`
	Endpoint        string                 `json:"endpoint"`
	Method          string                 `json:"method"`
	Headers         map[string]string      `json:"headers"`
	Body            interface{}            `json:"body"`
	Parameters      map[string]interface{} `json:"parameters"`
	ExpectedStatus  int                    `json:"expected_status"`
	ExpectedResponse interface{}           `json:"expected_response"`
	Validators      []string               `json:"validators"`
	Timeout         time.Duration          `json:"timeout"`
	RetryCount      int                    `json:"retry_count"`
	Dependencies    []string               `json:"dependencies"`
	Variables       map[string]string      `json:"variables"`
	Assertions      []*Assertion           `json:"assertions"`
	Metadata        map[string]interface{} `json:"metadata"`
}

// TestEnvironment represents a test environment configuration
type TestEnvironment struct {
	Name            string                 `json:"name"`
	Description     string                 `json:"description"`
	Services        map[string]*ServiceConfig `json:"services"`
	Databases       map[string]*DatabaseConfig `json:"databases"`
	MessageQueues   map[string]*QueueConfig    `json:"message_queues"`
	ExternalAPIs    map[string]*APIConfig      `json:"external_apis"`
	Configuration   map[string]interface{}     `json:"configuration"`
	SetupScript     string                     `json:"setup_script"`
	TeardownScript  string                     `json:"teardown_script"`
	HealthChecks    []*HealthCheck             `json:"health_checks"`
	Metadata        map[string]interface{}     `json:"metadata"`
	CreatedAt       time.Time                  `json:"created_at"`
}

// ServiceDependency represents a service dependency
type ServiceDependency struct {
	Name            string                 `json:"name"`
	Type            DependencyType         `json:"type"`
	Endpoint        string                 `json:"endpoint"`
	HealthCheck     *HealthCheck           `json:"health_check"`
	MockConfig      *MockConfig            `json:"mock_config"`
	Required        bool                   `json:"required"`
	Timeout         time.Duration          `json:"timeout"`
	RetryPolicy     *RetryPolicy           `json:"retry_policy"`
	Metadata        map[string]interface{} `json:"metadata"`
}

// TestDataProvider provides test data for scenarios
type TestDataProvider struct {
	Name            string                 `json:"name"`
	Type            DataProviderType       `json:"type"`
	Source          string                 `json:"source"`
	Configuration   map[string]interface{} `json:"configuration"`
	DataSets        map[string]*DataSet    `json:"data_sets"`
	Generator       DataGenerator          `json:"-"`
	Metadata        map[string]interface{} `json:"metadata"`
}

// ResponseValidator validates API responses
type ResponseValidator struct {
	Name            string                 `json:"name"`
	Type            ValidatorType          `json:"type"`
	Rules           []*ValidationRule      `json:"rules"`
	Schema          interface{}            `json:"schema"`
	CustomValidator func(interface{}) error `json:"-"`
	Metadata        map[string]interface{} `json:"metadata"`
}

// Supporting types
type StepType string
const (
	StepTypeHTTP        StepType = "http"
	StepTypeGRPC        StepType = "grpc"
	StepTypeDatabase    StepType = "database"
	StepTypeMessageQueue StepType = "message_queue"
	StepTypeScript      StepType = "script"
	StepTypeWait        StepType = "wait"
	StepTypeValidation  StepType = "validation"
)

type DependencyType string
const (
	DependencyTypeHTTP     DependencyType = "http"
	DependencyTypeGRPC     DependencyType = "grpc"
	DependencyTypeDatabase DependencyType = "database"
	DependencyTypeQueue    DependencyType = "queue"
	DependencyTypeExternal DependencyType = "external"
)

type DataProviderType string
const (
	DataProviderTypeStatic   DataProviderType = "static"
	DataProviderTypeGenerated DataProviderType = "generated"
	DataProviderTypeDatabase DataProviderType = "database"
	DataProviderTypeFile     DataProviderType = "file"
	DataProviderTypeAPI      DataProviderType = "api"
)

type ValidatorType string
const (
	ValidatorTypeJSON   ValidatorType = "json"
	ValidatorTypeXML    ValidatorType = "xml"
	ValidatorTypeSchema ValidatorType = "schema"
	ValidatorTypeCustom ValidatorType = "custom"
)

// Configuration types
type IntegrationConfig struct {
	DefaultTimeout      time.Duration          `json:"default_timeout"`
	MaxRetries          int                    `json:"max_retries"`
	ParallelExecution   bool                   `json:"parallel_execution"`
	FailFast            bool                   `json:"fail_fast"`
	CleanupOnFailure    bool                   `json:"cleanup_on_failure"`
	ReportFormat        string                 `json:"report_format"`
	ReportPath          string                 `json:"report_path"`
	Environments        []string               `json:"environments"`
	Tags                []string               `json:"tags"`
	Variables           map[string]interface{} `json:"variables"`
}

type ServiceConfig struct {
	Name        string            `json:"name"`
	Image       string            `json:"image"`
	Port        int               `json:"port"`
	Environment map[string]string `json:"environment"`
	HealthCheck *HealthCheck      `json:"health_check"`
	Dependencies []string         `json:"dependencies"`
}

type DatabaseConfig struct {
	Type        string            `json:"type"`
	Host        string            `json:"host"`
	Port        int               `json:"port"`
	Database    string            `json:"database"`
	Username    string            `json:"username"`
	Password    string            `json:"password"`
	Options     map[string]string `json:"options"`
	Migrations  []string          `json:"migrations"`
	SeedData    []string          `json:"seed_data"`
}

type QueueConfig struct {
	Type        string            `json:"type"`
	Host        string            `json:"host"`
	Port        int               `json:"port"`
	Username    string            `json:"username"`
	Password    string            `json:"password"`
	VirtualHost string            `json:"virtual_host"`
	Queues      []string          `json:"queues"`
	Exchanges   []string          `json:"exchanges"`
}

type APIConfig struct {
	Name        string            `json:"name"`
	BaseURL     string            `json:"base_url"`
	Headers     map[string]string `json:"headers"`
	Timeout     time.Duration     `json:"timeout"`
	MockEnabled bool              `json:"mock_enabled"`
	MockData    interface{}       `json:"mock_data"`
}

type HealthCheck struct {
	Endpoint    string        `json:"endpoint"`
	Method      string        `json:"method"`
	Timeout     time.Duration `json:"timeout"`
	Interval    time.Duration `json:"interval"`
	MaxRetries  int           `json:"max_retries"`
	ExpectedStatus int        `json:"expected_status"`
}

type MockConfig struct {
	Enabled     bool                   `json:"enabled"`
	Port        int                    `json:"port"`
	Routes      []*MockRoute           `json:"routes"`
	Responses   map[string]interface{} `json:"responses"`
	Latency     time.Duration          `json:"latency"`
	ErrorRate   float64                `json:"error_rate"`
}

type MockRoute struct {
	Path     string                 `json:"path"`
	Method   string                 `json:"method"`
	Response interface{}            `json:"response"`
	Status   int                    `json:"status"`
	Headers  map[string]string      `json:"headers"`
	Delay    time.Duration          `json:"delay"`
	Metadata map[string]interface{} `json:"metadata"`
}

type Prerequisite struct {
	Type        string                 `json:"type"`
	Description string                 `json:"description"`
	Check       func() error           `json:"-"`
	Timeout     time.Duration          `json:"timeout"`
	Metadata    map[string]interface{} `json:"metadata"`
}

type RetryPolicy struct {
	MaxAttempts  int           `json:"max_attempts"`
	BackoffType  string        `json:"backoff_type"`
	InitialDelay time.Duration `json:"initial_delay"`
	MaxDelay     time.Duration `json:"max_delay"`
	Multiplier   float64       `json:"multiplier"`
}

type CleanupPolicy struct {
	Enabled     bool          `json:"enabled"`
	Timeout     time.Duration `json:"timeout"`
	OnFailure   bool          `json:"on_failure"`
	OnSuccess   bool          `json:"on_success"`
	Resources   []string      `json:"resources"`
	Scripts     []string      `json:"scripts"`
}

type DataSet struct {
	Name        string                 `json:"name"`
	Data        []map[string]interface{} `json:"data"`
	Schema      interface{}            `json:"schema"`
	Generator   string                 `json:"generator"`
	Count       int                    `json:"count"`
	Metadata    map[string]interface{} `json:"metadata"`
}

type DataGenerator interface {
	Generate(count int, schema interface{}) ([]map[string]interface{}, error)
	GetType() string
}

type ValidationRule struct {
	Field       string      `json:"field"`
	Type        string      `json:"type"`
	Required    bool        `json:"required"`
	Pattern     string      `json:"pattern"`
	MinValue    interface{} `json:"min_value"`
	MaxValue    interface{} `json:"max_value"`
	AllowedValues []interface{} `json:"allowed_values"`
	CustomRule  func(interface{}) error `json:"-"`
}

type Assertion struct {
	Type        string      `json:"type"`
	Field       string      `json:"field"`
	Operator    string      `json:"operator"`
	Expected    interface{} `json:"expected"`
	Message     string      `json:"message"`
}

// TestLogger interface
type TestLogger interface {
	Debug(msg string, args ...interface{})
	Info(msg string, args ...interface{})
	Warn(msg string, args ...interface{})
	Error(msg string, err error, args ...interface{})
}

// NewIntegrationTestSuite creates a new integration test suite
func NewIntegrationTestSuite(config *IntegrationConfig, logger TestLogger) *IntegrationTestSuite {
	if config == nil {
		config = DefaultIntegrationConfig()
	}

	return &IntegrationTestSuite{
		scenarios:     make(map[string]*TestScenario),
		environments:  make(map[string]*TestEnvironment),
		dependencies:  make(map[string]*ServiceDependency),
		dataProviders: make(map[string]*TestDataProvider),
		validators:    make(map[string]*ResponseValidator),
		config:        config,
		logger:        logger,
	}
}

// DefaultIntegrationConfig returns default integration test configuration
func DefaultIntegrationConfig() *IntegrationConfig {
	return &IntegrationConfig{
		DefaultTimeout:    5 * time.Minute,
		MaxRetries:        3,
		ParallelExecution: true,
		FailFast:          false,
		CleanupOnFailure:  true,
		ReportFormat:      "json",
		ReportPath:        "./test-reports",
		Environments:      []string{"test"},
		Tags:              make([]string, 0),
		Variables:         make(map[string]interface{}),
	}
}

// CreateTestScenario creates a new test scenario
func (its *IntegrationTestSuite) CreateTestScenario(name, description string) *TestScenario {
	its.mutex.Lock()
	defer its.mutex.Unlock()

	scenario := &TestScenario{
		ID:            fmt.Sprintf("scenario_%d", time.Now().UnixNano()),
		Name:          name,
		Description:   description,
		Steps:         make([]*TestStep, 0),
		Prerequisites: make([]*Prerequisite, 0),
		Environment:   "test",
		Timeout:       its.config.DefaultTimeout,
		RetryPolicy:   DefaultRetryPolicy(),
		CleanupPolicy: DefaultCleanupPolicy(),
		Tags:          make([]string, 0),
		Priority:      1,
		Parallel:      its.config.ParallelExecution,
		Metadata:      make(map[string]interface{}),
		CreatedAt:     time.Now(),
		UpdatedAt:     time.Now(),
	}

	its.scenarios[scenario.ID] = scenario
	its.logger.Info("Test scenario created", "id", scenario.ID, "name", name)

	return scenario
}

// DefaultRetryPolicy returns default retry policy
func DefaultRetryPolicy() *RetryPolicy {
	return &RetryPolicy{
		MaxAttempts:  3,
		BackoffType:  "exponential",
		InitialDelay: 1 * time.Second,
		MaxDelay:     30 * time.Second,
		Multiplier:   2.0,
	}
}

// DefaultCleanupPolicy returns default cleanup policy
func DefaultCleanupPolicy() *CleanupPolicy {
	return &CleanupPolicy{
		Enabled:   true,
		Timeout:   30 * time.Second,
		OnFailure: true,
		OnSuccess: true,
		Resources: make([]string, 0),
		Scripts:   make([]string, 0),
	}
}

// AddStep adds a step to a test scenario
func (ts *TestScenario) AddStep(step *TestStep) {
	ts.Steps = append(ts.Steps, step)
	ts.UpdatedAt = time.Now()
}

// CreateHTTPStep creates an HTTP test step
func CreateHTTPStep(name, service, endpoint, method string) *TestStep {
	return &TestStep{
		ID:              fmt.Sprintf("step_%d", time.Now().UnixNano()),
		Name:            name,
		Type:            StepTypeHTTP,
		Service:         service,
		Endpoint:        endpoint,
		Method:          method,
		Headers:         make(map[string]string),
		Parameters:      make(map[string]interface{}),
		ExpectedStatus:  200,
		Validators:      make([]string, 0),
		Timeout:         30 * time.Second,
		RetryCount:      0,
		Dependencies:    make([]string, 0),
		Variables:       make(map[string]string),
		Assertions:      make([]*Assertion, 0),
		Metadata:        make(map[string]interface{}),
	}
}

// CreateDatabaseStep creates a database test step
func CreateDatabaseStep(name, query string) *TestStep {
	return &TestStep{
		ID:           fmt.Sprintf("step_%d", time.Now().UnixNano()),
		Name:         name,
		Type:         StepTypeDatabase,
		Body:         query,
		Parameters:   make(map[string]interface{}),
		Validators:   make([]string, 0),
		Timeout:      30 * time.Second,
		Dependencies: make([]string, 0),
		Variables:    make(map[string]string),
		Assertions:   make([]*Assertion, 0),
		Metadata:     make(map[string]interface{}),
	}
}

// CreateTestEnvironment creates a new test environment
func (its *IntegrationTestSuite) CreateTestEnvironment(name, description string) *TestEnvironment {
	its.mutex.Lock()
	defer its.mutex.Unlock()

	environment := &TestEnvironment{
		Name:          name,
		Description:   description,
		Services:      make(map[string]*ServiceConfig),
		Databases:     make(map[string]*DatabaseConfig),
		MessageQueues: make(map[string]*QueueConfig),
		ExternalAPIs:  make(map[string]*APIConfig),
		Configuration: make(map[string]interface{}),
		HealthChecks:  make([]*HealthCheck, 0),
		Metadata:      make(map[string]interface{}),
		CreatedAt:     time.Now(),
	}

	its.environments[name] = environment
	its.logger.Info("Test environment created", "name", name)

	return environment
}

// AddService adds a service to the test environment
func (te *TestEnvironment) AddService(name string, config *ServiceConfig) {
	te.Services[name] = config
}

// AddDatabase adds a database to the test environment
func (te *TestEnvironment) AddDatabase(name string, config *DatabaseConfig) {
	te.Databases[name] = config
}

// CreateDataProvider creates a new test data provider
func (its *IntegrationTestSuite) CreateDataProvider(name string, providerType DataProviderType) *TestDataProvider {
	its.mutex.Lock()
	defer its.mutex.Unlock()

	provider := &TestDataProvider{
		Name:          name,
		Type:          providerType,
		Configuration: make(map[string]interface{}),
		DataSets:      make(map[string]*DataSet),
		Metadata:      make(map[string]interface{}),
	}

	its.dataProviders[name] = provider
	its.logger.Info("Test data provider created", "name", name, "type", providerType)

	return provider
}

// CreateValidator creates a new response validator
func (its *IntegrationTestSuite) CreateValidator(name string, validatorType ValidatorType) *ResponseValidator {
	its.mutex.Lock()
	defer its.mutex.Unlock()

	validator := &ResponseValidator{
		Name:     name,
		Type:     validatorType,
		Rules:    make([]*ValidationRule, 0),
		Metadata: make(map[string]interface{}),
	}

	its.validators[name] = validator
	its.logger.Info("Response validator created", "name", name, "type", validatorType)

	return validator
}

// RunScenario executes a test scenario
func (its *IntegrationTestSuite) RunScenario(ctx context.Context, scenarioID string) (*ScenarioResult, error) {
	its.mutex.RLock()
	scenario, exists := its.scenarios[scenarioID]
	its.mutex.RUnlock()

	if !exists {
		return nil, fmt.Errorf("scenario %s not found", scenarioID)
	}

	its.logger.Info("Running test scenario", "id", scenarioID, "name", scenario.Name)

	startTime := time.Now()
	result := &ScenarioResult{
		ScenarioID:  scenarioID,
		Name:        scenario.Name,
		StartTime:   startTime,
		StepResults: make([]*StepResult, 0),
		Success:     true,
		Metadata:    make(map[string]interface{}),
	}

	// Check prerequisites
	for _, prereq := range scenario.Prerequisites {
		if err := its.checkPrerequisite(ctx, prereq); err != nil {
			result.Success = false
			result.Error = fmt.Errorf("prerequisite failed: %w", err)
			result.EndTime = time.Now()
			return result, result.Error
		}
	}

	// Execute steps
	for _, step := range scenario.Steps {
		stepResult, err := its.executeStep(ctx, step, scenario)
		result.StepResults = append(result.StepResults, stepResult)

		if err != nil {
			result.Success = false
			result.Error = err
			if its.config.FailFast {
				break
			}
		}
	}

	result.EndTime = time.Now()
	result.Duration = result.EndTime.Sub(result.StartTime)

	its.logger.Info("Test scenario completed", 
		"id", scenarioID, 
		"success", result.Success,
		"duration", result.Duration,
	)

	return result, result.Error
}

// checkPrerequisite checks a prerequisite
func (its *IntegrationTestSuite) checkPrerequisite(ctx context.Context, prereq *Prerequisite) error {
	its.logger.Debug("Checking prerequisite", "type", prereq.Type, "description", prereq.Description)

	if prereq.Check != nil {
		return prereq.Check()
	}

	return nil
}

// executeStep executes a test step
func (its *IntegrationTestSuite) executeStep(ctx context.Context, step *TestStep, scenario *TestScenario) (*StepResult, error) {
	startTime := time.Now()
	
	its.logger.Debug("Executing step", "id", step.ID, "name", step.Name, "type", step.Type)

	stepResult := &StepResult{
		StepID:    step.ID,
		Name:      step.Name,
		Type:      step.Type,
		StartTime: startTime,
		Success:   true,
		Metadata:  make(map[string]interface{}),
	}

	// Create step context with timeout
	stepCtx := ctx
	if step.Timeout > 0 {
		var cancel context.CancelFunc
		stepCtx, cancel = context.WithTimeout(ctx, step.Timeout)
		defer cancel()
	}

	// Execute step based on type
	var err error
	switch step.Type {
	case StepTypeHTTP:
		err = its.executeHTTPStep(stepCtx, step, stepResult)
	case StepTypeDatabase:
		err = its.executeDatabaseStep(stepCtx, step, stepResult)
	case StepTypeWait:
		err = its.executeWaitStep(stepCtx, step, stepResult)
	default:
		err = fmt.Errorf("unsupported step type: %s", step.Type)
	}

	stepResult.EndTime = time.Now()
	stepResult.Duration = stepResult.EndTime.Sub(stepResult.StartTime)

	if err != nil {
		stepResult.Success = false
		stepResult.Error = err
	}

	return stepResult, err
}

// executeHTTPStep executes an HTTP step
func (its *IntegrationTestSuite) executeHTTPStep(ctx context.Context, step *TestStep, result *StepResult) error {
	// Simplified HTTP step execution
	its.logger.Debug("Executing HTTP step", "endpoint", step.Endpoint, "method", step.Method)
	
	// In a real implementation, this would make actual HTTP requests
	result.Response = map[string]interface{}{
		"status": step.ExpectedStatus,
		"body":   "mock response",
	}
	
	return nil
}

// executeDatabaseStep executes a database step
func (its *IntegrationTestSuite) executeDatabaseStep(ctx context.Context, step *TestStep, result *StepResult) error {
	// Simplified database step execution
	its.logger.Debug("Executing database step", "query", step.Body)
	
	// In a real implementation, this would execute actual database queries
	result.Response = map[string]interface{}{
		"rows_affected": 1,
		"result":        "mock result",
	}
	
	return nil
}

// executeWaitStep executes a wait step
func (its *IntegrationTestSuite) executeWaitStep(ctx context.Context, step *TestStep, result *StepResult) error {
	if duration, ok := step.Parameters["duration"].(time.Duration); ok {
		its.logger.Debug("Waiting", "duration", duration)
		time.Sleep(duration)
	}
	return nil
}

// Result types
type ScenarioResult struct {
	ScenarioID  string                 `json:"scenario_id"`
	Name        string                 `json:"name"`
	Success     bool                   `json:"success"`
	Error       error                  `json:"error"`
	StepResults []*StepResult          `json:"step_results"`
	StartTime   time.Time              `json:"start_time"`
	EndTime     time.Time              `json:"end_time"`
	Duration    time.Duration          `json:"duration"`
	Metadata    map[string]interface{} `json:"metadata"`
}

type StepResult struct {
	StepID    string                 `json:"step_id"`
	Name      string                 `json:"name"`
	Type      StepType               `json:"type"`
	Success   bool                   `json:"success"`
	Error     error                  `json:"error"`
	Response  interface{}            `json:"response"`
	StartTime time.Time              `json:"start_time"`
	EndTime   time.Time              `json:"end_time"`
	Duration  time.Duration          `json:"duration"`
	Metadata  map[string]interface{} `json:"metadata"`
}

// GetScenarioResults returns results for all scenarios
func (its *IntegrationTestSuite) GetScenarioResults() map[string]*ScenarioResult {
	// This would return actual test results from execution
	return make(map[string]*ScenarioResult)
}

// GenerateReport generates a test report
func (its *IntegrationTestSuite) GenerateReport(results map[string]*ScenarioResult) *TestReport {
	totalScenarios := len(results)
	passedScenarios := 0
	failedScenarios := 0
	totalDuration := time.Duration(0)

	for _, result := range results {
		if result.Success {
			passedScenarios++
		} else {
			failedScenarios++
		}
		totalDuration += result.Duration
	}

	return &TestReport{
		TotalScenarios:  totalScenarios,
		PassedScenarios: passedScenarios,
		FailedScenarios: failedScenarios,
		TotalDuration:   totalDuration,
		Results:         results,
		GeneratedAt:     time.Now(),
	}
}

// TestReport represents a test execution report
type TestReport struct {
	TotalScenarios  int                           `json:"total_scenarios"`
	PassedScenarios int                           `json:"passed_scenarios"`
	FailedScenarios int                           `json:"failed_scenarios"`
	TotalDuration   time.Duration                 `json:"total_duration"`
	Results         map[string]*ScenarioResult    `json:"results"`
	GeneratedAt     time.Time                     `json:"generated_at"`
}
